[gd_scene load_steps=20 format=3 uid="uid://evij72b3s6id"]

[ext_resource type="PackedScene" uid="uid://jg6tlewtywe5" path="res://scenes/projectile.tscn" id="1_a1iik"]
[ext_resource type="Script" path="res://scripts/water_ball_projectile.gd" id="2_ipoi0"]
[ext_resource type="Texture2D" uid="uid://l0ovixr7mqum" path="res://resources/point_light_texture.tres" id="3_am2rp"]
[ext_resource type="Texture2D" uid="uid://iqrd8v0uuvrm" path="res://resources/meta_ball_texture.tres" id="3_hopeb"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_pi55h"]
light_mode = 1

[sub_resource type="Curve" id="Curve_tao34"]
max_value = 2.0
_data = [Vector2(0, 1.40593), 0.0, 0.0, 0, 0, Vector2(1, 0.201581), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_4847i"]
curve = SubResource("Curve_tao34")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hnc1b"]
particle_flag_disable_z = true
direction = Vector3(1, 2.08165e-12, 2.08165e-12)
spread = 27.794
initial_velocity_min = 60.0
initial_velocity_max = 100.0
gravity = Vector3(0, 98, 0)
scale_curve = SubResource("CurveTexture_4847i")
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0

[sub_resource type="Curve" id="Curve_x1gcx"]
max_value = 2.0
_data = [Vector2(0, 0.799559), 0.0, 0.0, 0, 0, Vector2(1, 0.201581), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_43ndj"]
curve = SubResource("Curve_x1gcx")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mfluf"]
particle_flag_disable_z = true
direction = Vector3(-1, 2.08165e-12, 2.08165e-12)
spread = 80.0
initial_velocity_min = 40.0
initial_velocity_max = 50.0
gravity = Vector3(0, 98, 0)
scale_curve = SubResource("CurveTexture_43ndj")
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0

[sub_resource type="Animation" id="Animation_h6a1q"]
length = 0.001

[sub_resource type="Animation" id="Animation_aejfe"]
resource_name = "explode"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [2.4, 2.4, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aeip2"]
_data = {
"RESET": SubResource("Animation_h6a1q"),
"explode": SubResource("Animation_aejfe")
}

[sub_resource type="Curve" id="Curve_2jk8n"]
_data = [Vector2(0, 0.637409), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_uqles"]
curve = SubResource("Curve_2jk8n")

[sub_resource type="Curve" id="Curve_s3ff2"]
max_value = 3.0
_data = [Vector2(0, 0.00511932), 0.0, 0.0, 0, 0, Vector2(0.985673, 0.651633), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_pqho2"]
curve = SubResource("Curve_s3ff2")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_y26lf"]
particle_flag_disable_z = true
direction = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
spread = 180.0
initial_velocity_min = 60.0
initial_velocity_max = 80.0
gravity = Vector3(2.08165e-12, 60, 2.08165e-12)
scale_max = 2.0
scale_curve = SubResource("CurveTexture_uqles")
scale_over_velocity_curve = SubResource("CurveTexture_pqho2")
collision_mode = 1
collision_friction = 0.0
collision_bounce = 0.0

[node name="WaterBallProjectile" instance=ExtResource("1_a1iik")]
visibility_layer = 2
z_index = 1
script = ExtResource("2_ipoi0")
time_until_queue_free = 0.8
element = "Water"

[node name="Sprite2D" parent="." index="0"]
visibility_layer = 2

[node name="Water" type="GPUParticles2D" parent="." index="2"]
light_mask = 0
visibility_layer = 2
material = SubResource("CanvasItemMaterial_pi55h")
amount = 20
process_material = SubResource("ParticleProcessMaterial_hnc1b")
texture = ExtResource("3_hopeb")

[node name="SmallDropplets" type="GPUParticles2D" parent="." index="3"]
light_mask = 0
visibility_layer = 2
material = SubResource("CanvasItemMaterial_pi55h")
process_material = SubResource("ParticleProcessMaterial_mfluf")
texture = ExtResource("3_hopeb")

[node name="PointLight2D" type="PointLight2D" parent="." index="4"]
color = Color(0, 0.682353, 0.972549, 1)
energy = 2.4
texture = ExtResource("3_am2rp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]
libraries = {
"": SubResource("AnimationLibrary_aeip2")
}

[node name="ExplosionParticles" type="GPUParticles2D" parent="." index="6"]
visibility_layer = 2
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_y26lf")
texture = ExtResource("3_hopeb")
one_shot = true
explosiveness = 1.0
